plugins {
    id 'java-library'
    id 'com.gradleup.shadow' version '9.2.2'
    id 'io.papermc.paperweight.userdev' version '2.0.0-beta.19'
    id 'checkstyle'
}

group = 'me.mapacheee'
version = '3.1.1'
description = 'ExtendedHorizons - Advanced view distance extension plugin'

java {
    toolchain.languageVersion = JavaLanguageVersion.of(21)
}

repositories {
    mavenCentral()
    mavenLocal()
    maven {
        name = 'papermc-repo'
        url = 'https://repo.papermc.io/repository/maven-public/'
    }
        maven {
        name = 'sonatype'
        url = 'https://oss.sonatype.org/content/groups/public/'
    }
    maven {
        name = 'placeholderapi'
        url = 'https://repo.extendedclip.com/content/repositories/placeholderapi/'
    }
    maven {
        name = 'codemc-repo'
        url = 'https://repo.codemc.org/repository/maven-public/'
    }
    maven {
        name = 'codemc-snapshots'
        url = 'https://repo.codemc.io/repository/maven-snapshots/'
    }
    maven {
        name = 'enginehub-repo'
        url = 'https://maven.enginehub.org/repo/'
    }
}

dependencies {
    compileOnlyApi("me.mapacheee:MapacheeeLib:1.0.0")
    annotationProcessor("me.mapacheee:MapacheeeLib:1.0.0")
    paperweight.paperDevBundle("1.21.8-R0.1-SNAPSHOT")

    annotationProcessor("com.thewinterframework:paper:1.0.6")
    annotationProcessor("com.thewinterframework:configuration:1.0.4")

    compileOnly("me.clip:placeholderapi:2.12.2")
    compileOnly(platform("com.intellectualsites.bom:bom-newest:1.56"))
    compileOnly("com.fastasyncworldedit:FastAsyncWorldEdit-Core")
    compileOnly("com.fastasyncworldedit:FastAsyncWorldEdit-Bukkit") { transitive = false }
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
    options.release = 21
}

shadowJar {
    relocate 'com.github.benmanes.caffeine', 'me.mapacheee.lib.caffeine'
    manifest {
        attributes(
            'Implementation-Title': project.name,
            'Implementation-Version': project.version,
            'Multi-Release': 'false'
        )
    }

    archiveBaseName = 'ExtendedHorizons'
    archiveClassifier = ''
    archiveVersion = project.version

    configurations = [project.configurations.runtimeClasspath]

    preserveFileTimestamps = false
    reproducibleFileOrder = true
}

tasks.build {
    dependsOn shadowJar
}

processResources {
    filteringCharset = 'UTF-8'
    filesMatching(['plugin.yml', 'paper-plugin.yml']) {
        expand(version: project.version, description: project.description)
    }
}

checkstyle {
    toolVersion = '10.12.5'
    configFile = file('checkstyle.xml')
    ignoreFailures = true
}
